--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,7 @@
     "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
     "files.associations": {
         "led-rgb.h": "c",
-        "botao.h": "c"
+        "botao.h": "c",
+        "cstdint": "c"
     }
 }
